<resources>
    <string name="app_name">myIrrigation</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nome_do_usuario">Nome Do Usuario</string>
    <string name="user_name">Nome do Usuario</string>
    <string name="value">Value</string>
    <string name="city">Cidade:</string>
    <string name="state">Estado:</string>
    <string name="country">País</string>
    <string name="cep">CEP:</string>
    <string name="email">E-mail:</string>
    <string name="back">Voltar</string>
    <string name="start">Iniciar</string>
    <string name="stop">Parar</string>
    <string name="task">Job</string>
    <string name="topic_Name">Nome do Topico</string>
    <string name="descriptionTopic">Descrição do Tópico</string>
    <string name="cloud_address">ENDEREÇO CLOUD</string>
    <string name="logout">Sair</string>
    <string name="menu1">Menu1</string>
    <string name="deviceName">NOME DO DISPOSITIVO</string>
    <string name="test">Teste</string>
    <string name="intertIpConection">INSIRA O IP DE CONEXÃO</string>
    <string name="portConection">PORTA DE CONEXÃO</string>
    <string name="portCloud">PORTA CLOUD</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="phone">Telefone</string>
</resources>