<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/configurationAcess"
    android:background="@color/light_gray">

    <View
        android:id="@+id/viewTopBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/green"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textTitleConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/viewTopBar"
        app:layout_constraintEnd_toEndOf="@id/viewTopBar"
        android:text="CONFIGURAÇÕES"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"/>

    <ImageButton
        android:id="@+id/confAcessReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/seta_esq"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/deviceNameView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/viewTopBar"
        android:background="@drawable/shapeconfig" />

    <TextView
        android:id="@+id/deviceNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/deviceName"
        app:layout_constraintTop_toTopOf="@id/deviceNameView"
        app:layout_constraintStart_toStartOf="@id/deviceNameView"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputDeviceName"
        android:layout_width="200dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:layout_height="wrap_content"
        android:hint="DEVICETESTE"
        app:layout_constraintTop_toBottomOf="@id/deviceNameText"
        app:layout_constraintStart_toStartOf="@id/deviceNameText"/>

    <View
        android:id="@+id/ipConection"
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_height="120dp"
        app:layout_constraintTop_toBottomOf="@id/deviceNameView"
        app:layout_constraintStart_toStartOf="@id/deviceNameView"
        android:background="@drawable/shapeconfig"/>

    <TextView
        android:id="@+id/ipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/intertIpConection"
        app:layout_constraintTop_toTopOf="@id/ipConection"
        app:layout_constraintStart_toStartOf="@id/ipConection"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputIpConection"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:hint="192.168.183.65"
        app:layout_constraintTop_toBottomOf="@id/ipText"
        app:layout_constraintStart_toStartOf="@id/ipText"/>

    <View
        android:id="@+id/portConection"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shapeconfig"
        app:layout_constraintTop_toBottomOf="@id/ipConection"
        app:layout_constraintStart_toStartOf="@id/ipConection"/>

    <TextView
        android:id="@+id/portConectionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/portConection"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="@id/portConection"
        app:layout_constraintStart_toStartOf="@id/portConection"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputPortConection"
        android:layout_width="200dp"
        android:hint="8081"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/portConectionText"
        app:layout_constraintTop_toBottomOf="@id/portConectionText"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/awsConection"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shapeconfig"
        app:layout_constraintTop_toBottomOf="@id/portConection"
        app:layout_constraintStart_toStartOf="@id/portConection"/>

    <TextView
        android:id="@+id/awsConectionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/cloud_address"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="@id/awsConection"
        app:layout_constraintStart_toStartOf="@id/awsConection"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/awsInputConection"
        android:layout_width="350dp"
        android:hint="ec2-3-90-139-232.compute-1.amazonaws.com"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/awsConectionText"
        app:layout_constraintTop_toBottomOf="@id/awsConectionText"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/awsPortConection"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shapeconfig"
        app:layout_constraintTop_toBottomOf="@id/awsConection"
        app:layout_constraintStart_toStartOf="@id/awsConection"/>

    <TextView
        android:id="@+id/awsPortConectionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/portCloud"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="@id/awsPortConection"
        app:layout_constraintStart_toStartOf="@id/awsPortConection"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/awsInputPortConection"
        android:layout_width="200dp"
        android:hint="1883"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/awsPortConectionText"
        app:layout_constraintTop_toBottomOf="@id/awsPortConectionText"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>